--- a/EstrelaDaMorteAPI/EstrelaDaMorteAPI.csproj
+++ b/EstrelaDaMorteAPI/EstrelaDaMorteAPI.csproj
@@ -27,4 +27,9 @@
       <Folder Include="Controllers" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Business\Business.csproj" />
+      <ProjectReference Include="..\Infra\Infra.csproj" />
+    </ItemGroup>
+
 </Project>
