--- a/EstrelaDaMorteAPI/appsettings.json
+++ b/EstrelaDaMorteAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=172.17.0.6;Database=EstrelaDaMorte;User Id=sa;Password=App@12345;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
